--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
-
+    <header id="header>This is the header</header>
+    <main id="main">Main Section</main>
+    <aside id="aside">Aside Section</aside>
+    <footer id="footer">This is the footer</footer>
 </body>
 
 </html>
